<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ss"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="@dimen/label_height"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="31dp"
        android:text="@string/txt_nombre1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="@dimen/txt_height1"
        android:ems="10"
        android:hint="@string/txt_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/label_height"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="31dp"
        android:text="@string/txt_solicitud"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="@dimen/txt_height1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_solicitud1"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/img_content"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="@dimen/label_height"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="25dp"
        android:text="@string/label_contacto"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="0dp"
        android:layout_height="@dimen/txt_height"
        android:layout_marginEnd="33dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="33dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/txt_celular"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="@dimen/label_height"
        android:layout_marginEnd="33dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="33dp"
        android:layout_marginStart="32dp"
        android:text="@string/label_telefono"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="0dp"
        android:layout_height="@dimen/txt_height"
        android:layout_marginEnd="33dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="33dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/txt_correo1"
        android:inputType="textPersonName|textWebEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="@dimen/label_height"
        android:layout_marginEnd="33dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="33dp"
        android:layout_marginStart="32dp"
        android:text="@string/label_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="54dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="54dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>